tests/gcc-torture/breakdown/success/20010711-1.c
#include "cerberus.h"
void foo (int *a) {}

int 
main (void)
{
  int a;
  if (&a == 0)
    abort ();
  else
    {
      foo (&a);
      exit (0);
    }
}
